Fixes spacing

--- a/components/globalWrapper/globalWrapper.module.css
+++ b/components/globalWrapper/globalWrapper.module.css
@@ -1,6 +1,6 @@
 .childContainer {
 	margin-left: 70px;
-	background-color: rgb(241, 241, 241);
+	background-color: rgb(248, 248, 248);
 	padding: 20px;
 }
 
